# phaseField

./: .clang-format  .clang-tidy  .codespellrc  .gersemirc  .gitattributes  .gitignore  .gitmodules  .lycheeignore  .pre-commit-config.yaml  .project  .travis.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  Gemfile  LICENSE  README  README.md  VERSION  _config.yml  authors  contrib  copyright.sh  index.md  install  lychee.toml  relatedPages.dox  test_ci.py  test_ci.sh  time_compilation.sh  update_parameters.sh  version  version_changes.md  version_changes.txt
applications/: .clang-tidy  CMakeLists.txt  main.cc
applications/CHAC_anisotropy/: CHAC_anisotropy.md  CMakeLists.txt  ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  integratedFields.txt  main.cc  output.txt  parameters.h  parameters.in  parameters.prm  postprocess.cc  postprocess.h  residuals.h
applications/CHAC_anisotropy3D/: parameters.h
applications/CHAC_anisotropy3DReg/: ICs_and_BCs.h  parameters.h  residuals.h
applications/CHAC_anisotropyRegularized/: CHAC_anisotropyRegularized.md  CMakeLists.txt  ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  integratedFields.txt  main.cc  output.txt  parameters.h  parameters.in  parameters.prm  postprocess.cc  postprocess.h  residuals.h
applications/CHAC_anisotropy_regularized/: ICs_and_BCs.cc
applications/CHAC_performance_test/: ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  formulation_coupledCHAC.md  parameters.in  postprocess.cc  postprocess.h
applications/CHiMaD_1a/: custom_pde.h  parameters.prm
applications/CHiMaD_benchmark1a/: ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  integratedFields.txt  main.cc  parameters.h  parameters.in  postprocess.cc  postprocess.h
applications/CHiMaD_benchmark1c/: ICs_and_BCs.h  parameters.h
applications/CHiMaD_benchmark2a/: CMakeLists.txt  ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  integratedFields.txt  main.cc  parameters.h  parameters.in  parameters.prm  postprocess.cc  postprocess.h
applications/CHiMaD_benchmark3/: CMakeLists.txt  ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  getDendriteDim.py  parameters.in  postprocess.cc  postprocess.h  visitlog.py
applications/CHiMaD_benchmark6a/: ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  parameters.in  parameters.prm  postprocess.cc  postprocess.h
applications/CHiMaD_benchmark6a_revised/: ICs_and_BCs.cc  customPDE.h  equations.cc  f_tot_vs_time.eps  out.txt  parameters.in  postprocess.cc
applications/CHiMaD_benchmark6b/: ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  integratedFields.txt  main.cc  parameters.in  postprocess.cc  submit_mpi.pbs
applications/CHiMaD_benchmark6b_revised/: customPDE.h  f_tot_vs_time.eps  out.txt  parameters.in
applications/CHiMaD_benchmark7/: ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  parameters.in  postprocess.cc  postprocess.h
applications/CHiMaD_spinodal/: parameters.h
applications/CHiMaD_spinodalWithAdaptivity/: equations.h  parameters.h
applications/CHiMad_benchmark2a/: ICs_and_BCs.h  equations.h  parameters.h
applications/Corrosion_dev/: ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  parameters.in
applications/Explicit_potential/: ICs_and_BCs.cc  equations.cc  out.txt  parameters.in
applications/MgNd_precipitate_single_Bppp/: CMakeLists.txt  ICs_and_BCs.cc  ICs_and_BCs.h  MgNd_precipitate_single_Bppp.md  customPDE.h  custom_pde.h  equations.cc  equations.h  main.cc  parameters.in  parameters.prm  postprocess.cc  postprocess.h  precipitateEvolution_KKS.md
applications/_CHAC/: CMakeLists.txt  ICs_and_BCs.cc  equations.cc  parameters.prm  parameters_gradient_refinement.prm  postprocess.cc
applications/_CHAC_anisotropy/: CHAC_anisotropy.md  ICs_and_BCs.cc  customPDE.h  custom_pde.h  equations.cc  parameters.prm  postprocess.cc
applications/_CHAC_anisotropy_regularized/: CHAC_anisotropyRegularized.md  customPDE.h  custom_pde.h  equations.cc  parameters.prm  postprocess.cc
applications/_CHAC_performance_test/: ICs_and_BCs.cc  customPDE.h  custom_pde.h  equations.cc  main.cc  parameters.prm  postprocess.cc
applications/_MgNd_B1/: ICs_and_BCs.cc  ICs_and_BCs.h  customPDE.h  equations.cc  equations.h  nucleation.cc  nucleation.h  parameters.in  postprocess.cc  postprocess.h
applications/_MgNd_B1_single_whole/: ICs_and_BCs.cc  customPDE.h  equations.cc  nucleation.cc  parameters.in
applications/_MgNd_precipitate_single_Bppp/: ICs_and_BCs.cc  customPDE.h  custom_pde.h  equations.cc  parameters.prm  postprocess.cc  precipitateEvolution_KKS.md
applications/_MgNd_singleB1/: ICs_and_BCs.h  parameters.in  postprocess.h
applications/_MgNd_singleB1_whole/: ICs_and_BCs.h  customPDE.h  equations.h  parameters.in  postprocess.h
applications/_MgRE_preciptiate_nucleation/: CMakeLists.txt  ICs_and_BCs.h  customPDE.h  equations.h  integratedFields.txt  main.cc  nucleation.h  parameters.h  parameters.in  postprocess.h
applications/_MgY_Bp_WBM/: ICs_and_BCs.h  customPDE.h  equations.h  parameters.in  postprocess.h
applications/_MgY_Bp_precipitate/: CMakeLists.txt  ICs_and_BCs.h  customPDE.h  equations.h  main.cc  parameters.h
applications/_MgY_dakota/: ICs_and_BCs.h  additional_parameters.in  customPDE.h  dakota.rst  dakota_interface  dakota_interface.py  dakota_interface_dummy  dakota_interface_dummy.py  equations.h  getPrecipDimAuto.py  integratedFields.txt  mg_y_dakota.in  parameters.in  parameters_base.in  params.in.1  params.in.10  params.in.2  params.in.3  params.in.4  params.in.5  params.in.6  params.in.7  (+18 more)
doc/: .gitignore  CMakeLists.txt  README  README.md
src/: AC.h  CH.h  CMakeLists.txt  computeStress.h  coupled_CH_AC.h  coupled_CH_AC2.h  coupled_CH_AC_Mechanics.h  coupled_mixedCH_AC.h  dummy.cc  elasticityModels.h  fields.h  main.cc  matrixFreePDE.h  mechanics.h
tests/: CMakeLists.txt  automatic_regression_testtest_results.txt  main.cc  test.cc
(+9654 files in other folders)
